Issue #105: added a before_install step for installing packaging

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ python:
   - "2.7"
   - "3.6"
 
+before_install:
+  - pip install packaging
+
 install:
   - pip install -r requirements-cpu.txt
   - pip install .
